--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   </head>
   <body>
     <div id="main"></div>
+    <div id="main2"></div>
     <script src="./bundle.js"></script>
   </body>
 </html>
