--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <body>
     <div id="main"></div>
     <div id="main2"></div>
+    <div id="list"></div>
     <script src="./bundle.js"></script>
   </body>
 </html>
